--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,45 @@
 [submodule "vim-plugins/vim-fugitive"]
 	path = vim-plugins/vim-fugitive
-	url = git@github.com:tpope/vim-fugitive.git
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim-plugins/vim-sensible"]
 	path = vim-plugins/vim-sensible
-	url = git@github.com:tpope/vim-sensible.git
+	url = https://github.com/tpope/vim-sensible.git
 [submodule "vim-plugins/vim-surround"]
 	path = vim-plugins/vim-surround
-	url = git@github.com:tpope/vim-surround.git
+	url = https://github.com/tpope/vim-surround.git
 [submodule "vim-plugins/vim-dispatch"]
 	path = vim-plugins/vim-dispatch
-	url = git@github.com:tpope/vim-dispatch.git
+	url = https://github.com/tpope/vim-dispatch.git
 [submodule "vim-plugins/vim-gitgutter"]
 	path = vim-plugins/vim-gitgutter
-	url = git@github.com:airblade/vim-gitgutter.git
+	url = https://github.com/airblade/vim-gitgutter.git
 [submodule "vim-plugins/nerdtree"]
 	path = vim-plugins/nerdtree
-	url = git@github.com:preservim/nerdtree.git
+	url = https://github.com/preservim/nerdtree.git
 [submodule "vim-plugins/nerdtree-git-plugin"]
 	path = vim-plugins/nerdtree-git-plugin
-	url = git@github.com:Xuyuanp/nerdtree-git-plugin.git
+	url = https://github.com/Xuyuanp/nerdtree-git-plugin.git
 [submodule "vim-plugins/pytest-vim-compiler"]
 	path = vim-plugins/pytest-vim-compiler
-	url = git@github.com:5long/pytest-vim-compiler.git
+	url = https://github.com/5long/pytest-vim-compiler.git
 [submodule "vim-plugins/ale"]
 	path = vim-plugins/ale
-	url = git@github.com:dense-analysis/ale.git
+	url = https://github.com/dense-analysis/ale.git
 [submodule "vim-plugins/ctrlp.vim"]
 	path = vim-plugins/ctrlp.vim
-	url = git@github.com:ctrlpvim/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim-plugins/vim-airline"]
 	path = vim-plugins/vim-airline
-	url = git@github.com:vim-airline/vim-airline.git
+	url = https://github.com/vim-airline/vim-airline.git
 [submodule "vim-plugins/vim-airline-themes"]
 	path = vim-plugins/vim-airline-themes
-	url = git@github.com:vim-airline/vim-airline-themes.git
+	url = https://github.com/vim-airline/vim-airline-themes.git
 [submodule "vim-plugins/tmuxline.vim"]
 	path = vim-plugins/tmuxline.vim
-	url = git@github.com:edkolev/tmuxline.vim.git
+	url = https://github.com/edkolev/tmuxline.vim.git
 [submodule "vim-plugins/promptline.vim"]
 	path = vim-plugins/promptline.vim
-	url = git@github.com:edkolev/promptline.vim.git
+	url = https://github.com/edkolev/promptline.vim.git
 [submodule "vim-plugins/Vundle.vim"]
 	path = vim-plugins/Vundle.vim
-	url = git@github.com:VundleVim/Vundle.vim.git
+	url = https://github.com/VundleVim/Vundle.vim.git
