--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    - name: Install git-archive-all
+      run: |
+        python -m pip install --upgrade pip
+        pip install git-archive-all
 
     # Runs a single command using the runners shell
     - name: Run the build
