--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,10 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: build
-        path: build
+        path: build/pypear-*.tar.gz
+        
+    - uses: actions/upload-artifact@v1
+      with:
+        name: hash
+        path: build/pypear-*.hash
+    
