--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,5 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: build
-        path: build/pypear-*.tar.gz
-        
-    - uses: actions/upload-artifact@v1
-      with:
-        name: hash
-        path: build/pypear-*.hash
+        path: build
     
