--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,19 @@ jobs:
 
     - uses: actions/upload-artifact@v1
       with:
-        name: pypear.tar.gz
-        path: build/pypear.tar.gz
+        name: pypear
+        path: build
+
+    - name: Download artifact
+        uses: actions/download-artifact@v1.0.0
+        with:
+          name: pypear
+          path: artifact
+
+    - name: Calculate package hash
+      run: openssl sha256 artifact/pypear.zip | tee artifact:/pypear.hash
 
     - uses: actions/upload-artifact@v1
       with:
-        name: pypear.hash
-        path: build/pypear.hash
+        name: hash
+        path: artifact/pypear.hash
