--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 120
-exclude = vim-*
+exclude = vim*
 max-complexity = 10
 
 [tool:pytest]
-norecursedirs = .git _build tmp* vim-*
+norecursedirs = .git _build tmp* vim*
