--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,18 +33,4 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: pypear
-        path: build
-
-    - name: Download artifact
-      uses: actions/download-artifact@v1.0.0
-      with:
-        name: pypear
-        path: artifact
-
-    - name: Calculate package hash
-      run: openssl sha256 artifact/pypear.zip | tee artifact:/pypear.hash
-
-    - uses: actions/upload-artifact@v1
-      with:
-        name: hash
-        path: artifact/pypear.hash
+        path: dist
