--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -21,6 +24,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup Python
       uses: actions/setup-python@v1.2.0
+        with:
+          python-version: ${{ matrix.python-version }}
+    - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
     - name: Install git-archive-all
       run: |
         python -m pip install --upgrade pip
