--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,52 @@
+
+[metadata]
+name = pypear
+version = 0.0.8
+description = Terminal based python development
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/brianmcconnel/pypear
+author = Brian McConnel
+author_email = brianmcconnel@gmail.com
+license = MIT
+license_file = LICENSE
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+keywords =
+    python
+    tmux
+    vim
+    pypear
+
+[options]
+packages = find:
+install_requires =
+    autopep8
+    flake8
+    pytest
+    pre-commit
+    pre-commit-hooks
+python_requires = >=3.6.1
+zip_safe = False
+
+[options.entry_points]
+console_scripts =
+    pypear = pypear.install:install
+
+[options.package_data]
+pypear =
+    vim/plugins.zip
+
+[bdist_wheel]
+universal = True
+
 [flake8]
 max-line-length = 120
 exclude = vim*
