--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     - name: Setup Python
-      uses: actions/setup-python@v1.2.0
+    - uses: actions/setup-python@v1.2.0
         with:
           python-version: ${{ matrix.python-version }}
     - name: Display Python version
