--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -28,16 +27,26 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
-    - name: Install git-archive-all
-      run: |
-        python -m pip install --upgrade pip
-        pip install git-archive-all
-
-        # Runs a single command u:sing the runners shell
     - name: Run the build
-      run: make install
-
-    - uses: actions/upload-artifact@v1
+      run: |
+        make install
+        make test
+      
+  pypi:
+    runs-on: ubuntu-latest
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    - name: Setup Python
+      uses: actions/setup-python@v1.2.0
       with:
-        name: pypear
-        path: dist
+        python-version: 3.7
+    - name: Create pypi dist
+      run: make dist
+    - name: pypi-publish
+      uses: pypa/gh-action-pypi-publish@v1.1.0
+      env:
+        pypi_token: ${{ secrets.pypi }}
+      with:
+        password: ${{ secrets.SuperSecret }}
+    
