--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       run: python -c "import sys; print(sys.version)"
     - name: Run the build
       run: |
+        python -m pip install --upgrade pip
         make install
         make test
       
@@ -42,11 +43,11 @@ jobs:
       with:
         python-version: 3.7
     - name: Create pypi dist
-      run: make dist
+      run: |
+        python -m pip install --upgrade pip
+        make dist
     - name: pypi-publish
       uses: pypa/gh-action-pypi-publish@v1.1.0
-      env:
-        pypi_token: ${{ secrets.pypi }}
       with:
-        password: ${{ secrets.SuperSecret }}
+        password: ${{ secrets.pypi }}
     
