--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
     - name: Create pypi dist
       run: |
         python -m pip install --upgrade pip
+        make install
         make dist
     - name: pypi-publish
       uses: pypa/gh-action-pypi-publish@v1.1.0
