--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 
 [metadata]
 name = pypear
-version = 0.0.11
+version = 0.0.10
 description = Terminal based python development
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -42,6 +42,7 @@ console_scripts =
 
 [options.package_data]
 pypear =
+    vimrc_template
     vim/plugins.zip
 
 [bdist_wheel]
