exclude pre-commit plugins from flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ universal = True
 
 [flake8]
 max-line-length = 120
-exclude = vim*
+exclude = vim*, pre-commit
 max-complexity = 10
 
 [tool:pytest]
