exclude pre-commit from pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,4 +54,4 @@ exclude = vim*, pre-commit
 max-complexity = 10
 
 [tool:pytest]
-norecursedirs = .git _build tmp* vim*
+norecursedirs = .git _build tmp* vim* pre-commit
